[package]
name = "pico-tft-display"
version = "0.1.0"
edition = "2021"

[dependencies]
# display
gc9a01-rs = { version = "0.1" }
embedded-graphics = { version = "0.8" }
tinybmp = { version = "0.5" }
tinygif = "0.4"

embedded-alloc = "0.5"


defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }

cortex-m-rt = "0.7.0"
embassy-executor = { branch = "main", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "integrated-timers",
    "executor-thread",
    "executor-interrupt",
    "nightly",
    # the arch/chip in use. RP2040 used a cortex-m. main entry is dependent on this
    "arch-cortex-m",
] }
embassy-time = { branch = "main", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "nightly",
    "defmt-timestamp-uptime",
] }
embassy-rp = { branch = "main", git = "https://github.com/embassy-rs/embassy", features = [
    "defmt",
    "unstable-traits",
    "nightly",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-
